--- a/test/fixtures/appointments.yml
+++ b/test/fixtures/appointments.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: appointments
+#
+#  appointment_id :integer          not null, primary key
+#  user_id        :integer
+#  car_id         :integer
+#  from           :datetime
+#  to             :datetime
+#  created_at     :datetime         not null
+#  updated_at     :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined. If you add columns to the
