--- a/test/fixtures/cars.yml
+++ b/test/fixtures/cars.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: cars
+#
+#  car_id     :integer          not null, primary key
+#  car_name   :string
+#  car_type   :string
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined. If you add columns to the
